--- a/data/changelog.txt
+++ b/data/changelog.txt
@@ -101,6 +101,22 @@ NPC will say what their current activity is + some infrastructure.
 Added ability to splint broken limbs to autodoc.
 Factions: start to implement useful faction relationship API.
 Riding animals and animal-pulled vehicles.
+Allow quenching fires with any bashing item instead of wielded
+Adds vehicle part cargo weight percentage modifier
+Add new mission type MGOAL_TALK_TO_NPC
+Adds towel hanger for vehicles
+Way to manually put out controlled fire in a fireplace
+Added PR-24 baton to Krav Maga
+Added blocking to hatchet and compatibility with firefighter belt
+Spike on a stick and knife spear work with Sojutsu and Silat
+Adds skeletal shocker zombies
+Entangling thrown weapons - net and bolas
+Adds four new professions exclusive to the Prison Escape and Island Prison Escape scenarios; an embezzler, a bootlegger, a political prisoner and a creepazoid.
+Add furniture that can emit fields
+Give dynamic NPCs proper overmap pathing/travel
+Gutter downspouts to act as funnels
+Allow any rope-type item to tie animals up
+Faction ownership vehicles
 
 ## Content:
 Adds refluffed and modified plasma gun.
@@ -179,6 +195,80 @@ Bathtubs can be used like kegs or water heaters to store liquids.
 Added a metal motor boat with a single gasoline engine.
 Minefields will spawn only at the entry of the bridges.
 Adds in many missing descriptions for furniture and terrain.
+Cordless drills use tiny motors, tiny motors lighter
+Add towel hanger recipe
+Adds new faction base
+Add towel hangers to RVs
+Add deployable workspaces, and UI support for them
+Added several new types of portal environment.
+Adds in the framework for creating calcium carbide as a precursor to acetylene as referenced by #32441
+Jsonify toxic waste dump'
+Removes Outdated Survivor's Notes
+Add more alcoholic drinks that make realistic sense
+Adds 106-ounce (3L) food cans.
+Tweaked bank cells loot spawn list.
+Improved philosophy books
+Adds Mycus Wine, Mycus Wine Must
+Adds wooden wagon for horses.
+Adds two NPCs to isherwood_farm and faction.
+Give Razor Girl's Protective Lenses CBM
+Adds refluffed and modified plasma gun
+Making dog and cat food perishable
+Don't use a small storage battery in UPS recipe
+Reduce body bag spawn rate in the woods
+Enables some non-frozen drying recipes.
+Adds new special for future NPC faction.
+Made motorcycle armor sensibly obtainable
+Updated martial arts valid_weapon check
+Change scenarios to be less restrictive and more generic
+Addition of an ammo bag
+Creates some monsters to inhabit mi-go encampments, adds prisoner NPCs, and adds mi-go camps to map spawns.
+Overhauls and adds missing CBM descriptions
+Adds polearm martial arts and one new weapon
+Use hinges instead of clockworks in the floor trunk recipe
+Changed martial arts buff default duration to 1 turn
+Add dairy farm roofs
+Adds a superior knife spear
+Add zoo roofs
+Add electronic store roofs
+Adds new basic alien terrain types and a basic mi-go encampment map, does not yet spawn in-game.
+Add warehouse roof
+Add vfw roof
+Add trailer park roofs
+Add veterinarian roof
+Gives Motocross Bike and Street-Legal Dirt Bike alternators
+Add thrift store roof
+Add swamp shack roofs
+Add sugar house roof
+Add subway roofs
+Add adult club roofs
+Add medium storage unit roofs
+Add sport store roof
+Add road stops/rest stop roofs
+Add radio station roofs
+Add smoking lounge roofs
+Add hardware store roofs
+Add shooting range roof
+Add large storage units roof
+Add small storage unit roofs
+Add campus admin building
+Giant insects spawned from artifacts are now pets. Added CANPLAY flag to JSON to support it.
+Add gas station roofs
+Add recycling center roofs
+Add public works roofs
+Add pump station roof
+Add radio tower roof
+Add power station roofs
+Mainline and update ATGM launcher from Tanks mod
+Fixed scalpel volume
+Add post office roofs
+Cleared confusing names of raw pasta items
+Prevent martial arts message when not using martial arts
+Added a new pawn shop variant with a basement.
+Added jumper_cable_heavy recipe
+Adds pavilion roofs
+Adds pet store roofs
+Adds pawn shop roofs and bathroom scale spawn
 
 ## Interface:
 Corpses (not underwear) will be shown on top at the places of death in map extras.
@@ -219,6 +309,20 @@ Add guidelines to vehicle interface for easier cursor location.
 Message cool-down - reduce similar message appearances.
 Wait option: Wait until you regain stamina.
 Auto-notes for map extras.
+You can now view your missions from the overmap.
+Change RetroDays background color to actual black
+Added an option to position the item pickup panel.
+sepia tint remembered tiles instead of simply darkening them
+Selecting vehicle controls has been made smarter, and it won't prompt you if it doesn't need to.
+Overmap mission UI improvements
+Genericize bucthery messages for dissectables
+No waiting while driving
+Change crafting furniture 'get items' hotkey to g, consistent with taking items from inside vehicles.
+Martial art style interface tweak
+Show map notes by default
+Adjust malnourishment to use bmi values
+adjust mana panel code to only appear when the player knows spells
+Show best tool quality when selecting butchering
 
 ## Mods:
 Re-adds fictional martial arts as a mod.
@@ -226,6 +330,40 @@ Added Aftershock sci-fi mod.
 Adds Mod: Buildable Hydroponics bays as furniture and adds Hydroponics in Labs.
 Adds the Magiclysm Mod.
 Add graphical mods category, put mods in it.
+Fixed deprecated color used in mods
+Added new special zombies to blacklist in mundane zombies
+Adjust 'fast healing' mod name/description, fix duration data error
+Magiclysm: Black Dragons and related gear
+Magiclysm: Fix spell calculations to clamp values correctly
+Magiclysm: Adjust Demon Spider Queen
+Fixed two recipes in Salvaged Robots mod
+Magiclysm - added a druid spell to purify water
+New Enchanted Items for Magiclysm. Tools, wands, and unarmed melee weapons
+Change basins from Aftershock to metal, and allow them to heat up food
+Magiclysm: Mana mutations of same catergory no longer stack'
+Magiclysm: Add new novice class professions
+Magiclysm - Conjured weapons corrected to possess magic_focus flag
+Move fusion gun to Aftershock
+Bugfix: Demon Spiders
+Magiclysm: Add Used Bookstore and Nothic
+Magiclysm: Adds demon spiders and a demon spider queen lair
+Magiclysm: Adds daytime 'troll' monster to forests.
+Magiclysm: gaining a class trait from learnign a spell update mutations
+Magiclysm: Magic foci and no hands spells
+Magiclysm: Novice Necromancer gets cutting implements to cast its spell
+Magiclysm: Multiple Spell Effects
+Adds Bulettes and will-o-wisps to Magiclysm
+Magiclysm: Novice Necro now COSTS two points, but allowed in apprentice scen.
+Magiclysm: First additions to alchemy
+Add Stats Through Kills Mod
+Magiclysm: Add new potions
+Magiclysm: Professions can start with known spells
+Magiclysm: adjust spell class prompt
+Magiclysm: Wizard's Apprentice Scenario
+Magiclysm: Technomancy spells and spellbooks.
+Basic magical weapons and enchanted item crafting framework for Magiclysm
+Magiclysm: Add magic basement
+Magiclysm: summoned monsters don't drop items, and other small fixes
 
 ## Balance:
 Remove reinforcement of non-cloth items.
@@ -248,6 +386,38 @@ Player's weight varies with BMI and size.
 Nerf outlandish drug effects.
 Surgery consumes anesthetic at a rate of 2mL/mn.
 Reduce turn time to 1 second.
+Removes small storage battery from UPS conversion mod recipe
+Martial arts rebalance for Boxing
+Balance black gunpowder bomb
+Changes game default start date to 30 days after Spring
+Slightly lowered encumbrance of leather arm guards
+Update encumbrance and draw cost of bandoliers and ammo pouches
+Bows that can be strapped on your torso are now water friendly
+resizing glass shards to a more realistic volume
+Martial arts rebalance for Bionic Combatives
+Salvaged CBM needs to be sterilized and re-conditioned
+Lit flares can now be used to start fires
+Reintroduce profession restrictions to the helicopter crash scenario
+Balance blunderbuss ammo recipe
+Increase black powder required to make explosive rockets
+Increase amount of black powder and add paper to blunderbuss shot
+Add sharp rocks to the result of boulder smashing
+Martial arts rebalance for Aikido
+More stamina rebalance for muscle-powered vehicles
+Rebalance cigarettes for 1s turns
+Increase amount of explosives for craftable explosives.
+Buffs dynamite to realistic explosive values
+Makes surgery a player_activity
+dragon skin vest update
+Added bash damage to the laptop
+Having a threshold mutation prerequisite no longer makes a particular mutation slightly less likely to occur
+Balances to makeshift grenades and makes them explode in fire.
+Increase fuse time on RDX sand/pipe bombs
+Wood planks should burn for about 30minutes now
+Being grabbed drastically reduce your dodging ability.
+Fixes disinfectant soaked materials #32056
+Ease requirements for boarding up doors and windows
+Foodperson mask is less common
 
 ## Bugfixes:
 Fixed long overmap location name being overwritten by "Distance to target:" string.
@@ -269,6 +439,105 @@ Consume tool charges incrementally during crafting.
 Fixed bugs related to starting time, item rot and monster evolution.
 Refuel fires while waiting.
 Extreme cold and heat won't be damaging bandages or contaminate disinfected wounds no more.
+Crash when folding bike with ^ menu'
+Update autoclave (item) description
+Mi-Go slaver beam attack no longer causes large amounts of noise
+Fewer chicken coops have fences which chickens can just walk through
+Fast food milkshakes are now considered junkfood
+Fix autoclave disapearance
+Fixes a redundant dialogue line
+Adds plural name entries for certain faulty bionics
+Changes the category of laptop to 'other' from 'weapon'
+Added a holocloak spawn
+Exclude lake specials from placement consideration if there is no lake
+Made several fruits dryable.
+Fixed UI showing incorrect charges on reloading empty furniture.
+Briefcase volume and storage values are now equal.
+Floor hole on the ranch
+Added lightstrip to heavy duty flashlight decon. recipe
+Fixed earthbag barricade and wall yield sand instead of soil on deconstructing or bashing
+Leverage reachable_flood_steps in map::use_charges
+Fixes adjusted tool requirements entering invalid state for tools with charges.
+Fix batteries not appearing in consume menu
+Fix for vehicle stamina exploit
+Fixed item sorting in 'Consume item' inventory window
+swapping profession in character creation removes previous traits
+UPS recharging non UPS powered items and not using bionic UPS
+Fix water replication bug (fixes #32625)
+Fix overmap reveal code when used on non-zero z-levels
+Sports cars spawn with racing wheels
+Modded professions no longer restrict wilderness scenario '
+Power armor works with a basic UPS as intended.
+Interrupted crafts due to tool no longer keep asking for tool nor proceed slowly.
+Fixes TV antenna giving to much copper wire when deconstructed
+Fix map field processing
+Tweaked "goo" lab rooms.
+Don't requre both quern and food processor for ice cream production
+Fix max intensity level for field emissions
+Land zombies ignore fish in water
+Fixes some minor bugs with magiclysm
+Fixed too short duration of various item uses
+change count to charges for large cardboard box in furniture.json
+Smoking Rack (Lighting while Rack has Dehydrated Meat causes Crash)
+Fix missing basecamp modular upgrades
+Allow harvesting pine trees multiple times
+Tools with PRY qualities now can pry by activating them.
+Fixed mortar protein powder recipe
+Restores NPC body processing without dropping optimization.
+Fixes #32511 blazemod diamond_frame ammo type error
+Changed a request for a float to an int
+Electric engines won't fail to start
+Fixed several things with meat dish recipes
+Fix faulty bionic removal crashes
+'Legacy' orchards and dairy farms overmap loading
+Magiclysm - cleaned up minor typos & grammar
+Put refugee and beggars clothes in the right order
+Fix vision oversights for computers/eink/remote control
+Fix crash while trading items with health bars
+Fix corrupting saves upon crash during saving
+Update hardcoded effects post 1 second turns
+Fixed hostile monsters coming unnoticed
+Fior Di Battaglia can no longer be used without a weapon
+Magiclysm - fix a pair of typos in effects.json
+Fix "Mining upstairs does not create a downstairs on the upper floor"
+Fix size and weight of black powder.
+Corrected infection duration factor to 8h
+Fix nail bombs
+Magiclysm - fixes professions.json typo introduced in #32290
+fix unpurifiable traits being mutated away
+Military maps no longer reveal farm silos and animal shelters
+Fix assertion failure on empty inventory screen
+Fix crash when examining empty gun with ammotype changing mod
+Fix crash when trying to cast recover_energy on nonplayer target
+Magiclysm - fix casting cost values for stormshaper spells
+spell monster special attacks use the cast_all_effects function
+Hallucination NPCs don't appear on photographs
+Fix long durations displaying as 'forever'
+fixed mana increments for nature's trance and summon bear
+lint monsters.json
+Remove vehicle name changes on ownership
+Fixed some recipes and actions having zero second durations
+Remove number from add_item to retrieve rope from tied creature
+Fix some fields not getting processed
+Prevent fire from spreading through non-flammable walls
+Fix hacksaw cut times.
+Medieval Swordsmanship now requires a sword to use
+NPC running off fix
+Fix mapgen crash triggered by toxic dump and hazardous waste sarcophagus
+Stop random NPC spawning in lakes and rivers
+Renew leftover dangling omt_path
+fix ownership naming of folding vehicles
+remove duplicate code in inventory::active_items()
+Allow bridges in vehicle pathfinding
+Place remains at player's feet after metal sawing.'
+Auto-travel : change target from top-left submap to centre of OMT
+Fixed several issues with sting-shoot monsters.
+fix roof access to garage_gas
+Unmute hallucination
+Fixes crash with netherworld attention
+Loop fix in multiple_construction_do_turn
+Fix error popping up on starting in LMOE shelter.
+Add missing special casing for tools without charge.
 
 ## Performance:
 Limit start location search radius.
@@ -291,6 +560,17 @@ Avoid recalculating vision and lightmap unnecessarily.
 Only retrieve vehicle list once a turn.
 Increase performance by removing check for recipe every crafting turn.
 Allow member access to weather_datum to bypass unnecessary translation.
+Minor vehicle performance optimizations
+More NPC-at-rest optimization.
+Code optimizations reported by static code analysis
+Optimize many NPC AI operations
+Speed up item::process_temperature_rot
+Defer testing validity of scent grid modification points until modification commit
+Remove dynamic_cast from Creature::sees and map::creature_in_field
+Avoid unecessarally enumerating monsters.
+Improve performance when fishing
+Speed up calls to get_wind_blockers
+Cache season length and eternal season options
 
 ## Infrastructure:
 Npctalk: Complete overhaul of NPC conversation infrastructure.
@@ -327,15 +607,48 @@ Cloaking is now tied to a json flag, allowing mods to introduce their own cloaki
 Mandate description of terrain and furniture.
 Basecamps: add a namespace and calculate workdays.
 Significant progress toward rationizing character/player/NPC classes.
+Convert calendar into a namespace
+Add custom clang-tidy check to enforce consistent point initialization
+Allow aliasing extendable lake shore terrain
+Unify spell effect functions to deprecate the if else ladder
+Time audit. Saner calendar field names.
+Use time_durations instead of ints for faults
+Refactor fields (step 8)
+Jsonize clothing mod
+Refactor fields (step 7)
+Refactor fields (step 6)
+Implement new item type for batteries
+Splits furniture.json into many smaller files
+Jsonize memory-related mutation modifiers
+Refactor fields (step 5)
+Splits furniture.json into many smaller files
+Use point/tripoint rather than individual coordinates in overmapbuffer functions
+add Spell fields as new members of spell_type
+Introduce a faster linked list implementation
+Moves around a number of json item definitions to more appropriate places
+Use time duration strings for effects
+Refactor fields (step 4)
+Monsters can cast spells as a special attack
+JSON-ize terrain and furniture that produce light
+Template read_from_json_string
+refactor player::calc_focus_equilibrium, disp_morale, update_mental_focus, reset_stats
+Change vehicle padding to a more optimal configuration
+Refactor fields (step 3)
+Add energy units using units::quantity
 
 ## Build:
 Npctalk: add a python dialogue validator.
 Update homebrew install instructions.
 Adds Flatpak build recipe/
 Clarify the compiling directions for Visual Studio.
+Enable github bot that automates closing stale issues.
 
 ## I18N and A11Y:
 Use translation markers to increase performance
+Make the translation for field name display
+Routine i18n updates on 26 Jul 2019
+Routine i18n updates on 13 Jul 2019
+Routine i18n updates on 7 Jul 2019
 
 # 0.D (Danny)
 
